--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -133,9 +133,9 @@ en:
   <ul><li>280 missions for 70 customers</li>
   <li>17,000 invoiced hours for an overall turnover of 1.5 million Euros</li></ul>
   <p>Our cumulated experience benefits our customers and prospects :</p>
-  <ul><li>No lag to be up and running<li>
+  <ul><li>No lag to be up and running</li>
   <li>field-tested recommendations</li>
-  <li>Technical hindisght<li>
+  <li>Technical hindisght</li>
   </ul>
   "
   achievements__html: "<p>Past missions :<ul><li>Project management to define a cloud offering :
