redirection vers le blog

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -26,6 +26,8 @@ en:
   title: "An independent IT consulting firm"
   motto: "A team of senior IT practicioners committed to the success of your projects"
   motto2: "We offer independent, operational, pragmatic IT consulting services"
+  blog: "Blog"
+
   language: "Français"
   local: "fr"
 
