--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -4,6 +4,7 @@ fr:
   title: "Cabinet de conseil IT indépendant"
   motto: "Une équipe de consultants seniors qui vous apporte une forte plus-value dans vos projets"
   motto2: "Nous vous conseillons avec pragmatisme en toute indépendance."
+  blog: "Articles"
 
   # bricolage basculement automatique FR/EN
   language: "English"
